# WattAdvisor

./: .gitignore  LICENSE  LICENSE.md  README.md  environment.yaml  environment_dev.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  results.json
.github/workflows/: build_documentation_and_commit_to_website_repo.yml  documentation.yml  documentation_this_repo.yml
docs/source/: about.md  code_snippet_cdsapi.py  conf.py  getting_started.md  index.rst  installation.rst
examples/: config.yaml  example_1.py  example_2.py  example_base.ipynb  normed_production_pv.csv  parameters.yaml
wattadvisor/: model_composition.py  opt_model.py
wattadvisor/components/: combined_heat_power.py  component.py  electrical_energy_storage.py  electrode_boiler.py  energy_demand.py  energy_feedin.py  energy_purchase.py  gas_boiler.py  heat_pump.py  investment_component.py  non_investment_component.py  photovoltaic.py  solarthemal_energy.py  solid_fuel_boiler.py  thermal_energy_storage.py  wind_power.py
wattadvisor/data_models/: base_model.py  bilance_variables.py  config_model.py  enums.py  input_model.py  input_model_component_normed_production_object.py  input_model_component_object.py  input_model_demand_object.py  input_model_energy_tariffs.py  input_model_location.py  input_model_single_tariff_energy_object.py  input_model_single_tariff_object.py  optimization_results_component_energy_production_object.py  optimization_results_component_object.py  optimization_results_model.py  optimization_results_scenario.py  optimization_results_scenario_kpis.py  (+4 more)
(+33 files in other folders)
